--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-leaflet": "^4.2.1"
+    "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
