--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
+    "react-medium-image-zoom": "^5.2.11",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
