--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@maptiler/sdk": "^2.4.1",
     "@turf/turf": "^7.1.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-medium-image-zoom": "^5.2.11",
+    "react-scripts": "^5.0.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
@@ -34,5 +36,17 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.10"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
